# sut

./: .dockerignore  Dockerfile.backend  app.py  config.py  docker-compose.yml  models.py  requirements.txt
api/: __init__.py  audit_api.py  auth_api.py  changes_api.py  import_export_api.py  notifications_api.py  projects_api.py  requirements_api.py  tracelinks_api.py  users_api.py
backend/: CMakeLists.txt  Dockerfile
backend/src/: config.hpp  database.cpp  database.hpp  main.cpp  models.hpp  password_utils.cpp  password_utils.hpp  session_manager.cpp  session_manager.hpp
backend/src/api/: audit_api.cpp  audit_api.hpp  auth_api.cpp  auth_api.hpp  changes_api.cpp  changes_api.hpp  middleware.hpp  notifications_api.cpp  notifications_api.hpp  projects_api.cpp  projects_api.hpp  requirements_api.cpp  requirements_api.hpp  tracelinks_api.cpp  tracelinks_api.hpp  users_api.cpp  users_api.hpp
backend/src/services/: audit_service.cpp  audit_service.hpp  change_service.cpp  change_service.hpp  import_export_service.cpp  import_export_service.hpp  notification_service.cpp  notification_service.hpp  requirement_service.cpp  requirement_service.hpp  traceability_service.cpp  traceability_service.hpp  user_service.cpp  user_service.hpp
docs/: architecture.puml  class_diagram.puml  dataflow.puml  deployment.puml  sequence_auth.puml  sequence_change.puml  sequence_import.puml  sequence_integrity.puml  sequence_tracelink.puml  sequences.puml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
instance/: sut.db
routes/: __init__.py  (+9 more)
(+46 files in other folders)
